--- a/music_api/templates/home.html
+++ b/music_api/templates/home.html
@@ -1,5 +1,4 @@
 {% extends 'base.html' %}
-{% load static %}
 {% block title %}RubySound.fm{% endblock %}
 
 {% block popular %}
@@ -10,12 +9,12 @@
   <div class="row mb-5 info-project position-relative">
     <svg class="note-icon d-none d-lg-block left hide-ipad-pro hide-ipad-mini" aria-hidden="true" viewBox="0 0 120 120"
       preserveAspectRatio="meet">
-      <image href="{% static 'images/note_rubin.svg' %}" width="120" height="120" />
+      <image href="/static/images/note_rubin.svg" width="120" height="120" />
     </svg>
 
     <svg class="note-icon d-none d-lg-block right hide-ipad-pro hide-ipad-mini" aria-hidden="true" viewBox="0 0 120 120"
       preserveAspectRatio="meet">
-      <image href="{% static 'images/note_rubin.svg' %}" width="120" height="120" />
+      <image href="/static/images/note_rubin.svg" width="120" height="120" />
     </svg>
 
     <div class="col-lg-8 mx-auto text-center box-info">
